# faster-rcnn-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.cpp  test_r50fpn.cpp  train.cpp  train_r50fpn.cpp
backbone/: CMakeLists.txt  resnet.h  vgg.cpp  vgg.h
config/: faster_rcnn_r50_fpn_1x_voc.json  faster_rcnn_vgg16.json
cvops/: CMakeLists.txt  ROIAlign.h  ROIAlign_cuda.cu  ROIPool.h  ROIPool_cuda.cu  cuda_helpers.h  cvops.h  nms.h  nms_cuda.cu  vision_cuda.h
data/: .gitignore  get_pretrained_model.py
dataset/: CMakeLists.txt  coco.cpp  coco.h  example.h  transform.h  vision.py  voc.cpp  voc.h  voc.py
eval/: CMakeLists.txt  coco_eval.py  eval.cpp  eval.h  test_eval.cpp  voc_eval.py
model/: CMakeLists.txt  anchor.cpp  backbone.cpp  backbone.h  rcnn_head.h  trainer.h
model_r50_fpn/: CMakeLists.txt  bbox.cpp  bbox.h  detector.cpp  detector.h  neck.cpp  rcnn_head.cpp  resnet.cpp  rpn_head.h  trainer.cpp
model_vgg/: CMakeLists.txt  anchor.cpp  anchor.h  bbox.cpp  bbox.h  detector.cpp  detector.h  loss.cpp  loss.h  rcnn_head.cpp  rcnn_head.h  rpn_head.cpp  rpn_head.h
r50_fpn_model/: anchor.h  detector.h  loss.cpp  neck.h  rpn_head.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h
